--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <strong>kepedean</strong>
                 .
             </p>
-            <p class="idea-4">karena lo,</p>
+            <p class="idea-4">karena lo memang,</p>
             <p class="idea-5">
                 KEPEDEAN
                 <span>:)</span>
