--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>ikan lele makan mede</p>
+            <p id="replay">sekali lagi, hbd.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
